--- a/src/Components/Home/Carousel/Card/Card.scss
+++ b/src/Components/Home/Carousel/Card/Card.scss
@@ -1,57 +1,56 @@
 .carousel_card {
     width: 100%;
-    height: 100%;
+    height: 50vh;
     display: flex;
     align-items: center;
-    text-align: left;
-}
-.carousel_card .contents{
-    height: 70%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    
-}
-.carousel_card h6{
-    font-size: 16px;
-
-}
-
-.carousel_card .text{
-    font-size: 50px;
-    display: flex;
-    flex-direction: column;
-
-}
-
-.carousel_card .button{
-
-background-color: black;
-padding: 5px;
-color: white;
-width: 50%;
-text-decoration: none;
-text-align: center;
-}
-@media only screen and (max-width: 768px) {
-    .carousel_card .text{
-        font-size: 30px;
+    text-align: center;
+  
+    .contents {
+      height: 70%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
-    .carousel_card {
-        text-align: center;
-        height: 50vh;
+  
+    h6 {
+      font-size: 16px;
     }
-    .carousel_card .contents{
-        width: 100%;
-        
-        
+  
+    .text {
+      font-size: 30px;
+      display: flex;
+      flex-direction: column;
     }
-    .carousel_card .button{
-        width: 50%;
-        align-self: center;
-        margin-bottom: 30px;
+  
+    .button {
+      background-color: black;
+      padding: 5px;
+      color: white;
+      width: 50%;
+      text-decoration: none;
+      text-align: center;
+      align-self: center;
+      margin-bottom: 30px;
     }
-    
-   
   }
+  
+  @media only screen and (min-width: 768px) {
+    .carousel_card {
+      text-align: left;
+      height: 100%;
+  
+      .contents {
+        width: 70%;
+      }
+  
+      .text {
+        font-size: 50px;
+      }
+  
+      .button {
+        width: 50%;
+      }
+    }
+  }
+  
