--- a/src/Components/Home/Carousel/Carousel.scss
+++ b/src/Components/Home/Carousel/Carousel.scss
@@ -1,78 +1,73 @@
 .carousel {
     overflow: hidden;
-    height: 85vh;
-
-}
-.inner {
-    white-space: nowrap;
-    transition: transform 0.3s;
-    width: 100vw;
-
-}
-.carousel-item {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
     height: 70vh;
-}
-.indicators {
-    display: flex;
-    justify-content: center;
-}
-.indicators button{
-    outline: none;
-    border: 1px solid black;
-    margin: 5px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all 0.5s;
-}
-.indicators button.active{
-    background-color: #d42d49;
-}
-.indicators button:hover{
-    background-color: #d42d49;
-}
-.item {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.item img {
-    max-height: 90%;
-    max-width: 100%;
-    
-}
-@media only screen and (max-width: 768px) {
-    .carousel {
-        height: 70vh;
-    
+  
+    .inner {
+      white-space: nowrap;
+      transition: transform 0.3s;
+      width: 100vw;
     }
+  
     .carousel-item {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      height: 55vh;
+    }
+  
+    .indicators {
+      display: flex;
+      justify-content: center;
+  
+      button {
+        outline: none;
+        border: 1px solid black;
+        margin: 5px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: all 0.5s;
+  
+        &.active {
+          background-color: #d42d49;
+        }
+  
+        &:hover {
+          background-color: #d42d49;
+        }
+      }
+    }
+  
+    .item {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+  
+      img {
+        width: 100%;
+        max-height: 90%;
+        max-width: 100%;
+      }
+    }
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .carousel {
+      height: 85vh;
+  
+      .carousel-item {
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        height: 55vh;
+        height: 70vh;
+      }
+  
+      .item {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
     }
-    .item{
-        display: flex;
-        flex-direction: column;
-        height: 50vh;
-    }
-    .item img{
-        width: 100%;
-    }
-    .carousel_card{
-        display: flex;
-        position: absolute;
-        top: 0;
-        z-index: 10;
-        width: 100vw;
-        justify-content: center;
-        align-items: center;
-    }
-   
   }
+  
