--- a/src/Components/Products/ProductPage/ProductPage.scss
+++ b/src/Components/Products/ProductPage/ProductPage.scss
@@ -1,4 +1,10 @@
-.product_page .burner{
+.Product_Page {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+    .burner{
     background: url('http://ellie.themes.zone/wp-content/uploads/2018/03/ribbon2.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,4 +16,128 @@
     justify-content: center;
     color: white;
     margin-left: 2vw;
+}
+.product{
+    margin-top: 50px;
+    width: 94%;
+    .image_detail{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+
+        .image_container{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .image{
+                width: 300px;
+                height: 400px;
+                margin: 0 auto;
+                background-color: #F2E1DA;
+                img{
+                    max-width: 100%;
+                    max-height: 100%;
+                }
+            }
+          
+        }
+    }
+    .detail {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        .add{
+            display: flex;
+            border: 1px solid #000;
+            height: 30px;
+            width: 240px;
+            background-color: black;
+
+            button{
+                height: 100%;
+                background-color: #F2E1DA;
+                border: 0;
+                outline: none;
+                width: 30px;
+                cursor: pointer;
+
+
+
+            }
+            #act{
+                width: 120px;
+                text-align: center;
+                background-color: black;
+                color: #F2E1DA;
+                font-size: large;
+                font-weight: 500;
+
+            }
+            input{
+                height: 95%;
+
+                width: 50px;
+                text-align: center;
+                border: none;
+                outline: none;
+            }
+        }
+    }
+
+    .details_shop{
+        padding: 10px 100px;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+}
+//mobile
+@media (max-width: 768px) {
+    .Product_Page {
+        .burner{
+            width: 100vw;
+            height: 20vh;
+            margin-left: 0vw;
+        }
+        .product{
+            width: 100%;
+            .image_detail{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .image_container{
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    .image{
+                        width: 300px;
+                        height: 400px;
+                     margin: 0 auto;
+                        background-color: transparent;
+                        img{
+                            max-width: 100%;
+                            max-height: 100%;
+                            
+                        }
+                    }
+             
+                }
+
+               
+            }
+            .details_shop{
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+        
+        }
+    }
 }
