--- a/src/Components/Accounts/ShopOwner/ShopOwners/ShopOwners.scss
+++ b/src/Components/Accounts/ShopOwner/ShopOwners/ShopOwners.scss
@@ -1,4 +1,4 @@
-.shops{
+.shop_owners{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -14,7 +14,7 @@
         gap: 10px;
 
     }
-    .shop_nav{
+    .shopOwner_Nav{
         font-weight: 600;
         font-size: 120%;
     }
